// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
.sxkgwoi {
  align-items: center;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-round);
  color: white;
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: all 50ms ease-out;
}

.sxkgwoi:focus {
  outline: 2px solid var(--sx-colors-primary);
  outline-offset: 1px;
}

:checked + .sxkgwoi {
  background-color: var(--sx-colors-primary);
  border-color: var(--sx-colors-primary);
}

.sxkgwoi[disabled] {
  background-color: var(--sx-colors-tonal100);
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxddr1z {
  height: 6px;
  width: 6px;
  border-radius: var(--sx-radii-round);
  background-color: currentcolor;
  position: absolute;
}

.sxykmo8 {
  display: flex;
  flex-wrap: wrap;
}

<div>
  <div
    class="sxykmo8"
    role="radiogroup"
  >
    <input
      disabled=""
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="sxkgwoi"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
.sxkgwoi {
  align-items: center;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid var(--sx-colors-tonal400);
  border-radius: var(--sx-radii-round);
  color: white;
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: all 50ms ease-out;
}

.sxkgwoi:focus {
  outline: 2px solid var(--sx-colors-primary);
  outline-offset: 1px;
}

:checked + .sxkgwoi {
  background-color: var(--sx-colors-primary);
  border-color: var(--sx-colors-primary);
}

.sxkgwoi[disabled] {
  background-color: var(--sx-colors-tonal100);
  border-color: var(--sx-colors-tonal400);
  color: var(--sx-colors-tonal400);
  cursor: not-allowed;
}

.sxddr1z {
  height: 6px;
  width: 6px;
  border-radius: var(--sx-radii-round);
  background-color: currentcolor;
  position: absolute;
}

.sxykmo8 {
  display: flex;
  flex-wrap: wrap;
}

<div>
  <div
    class="sxykmo8"
    role="radiogroup"
  >
    <input
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="indicator"
      class="sxkgwoi"
      data-radix-roving-focus-group-id="radix-id-0-1"
      data-state="unchecked"
      role="radio"
      tabindex="0"
      type="button"
      value="value"
    />
  </div>
</div>
`;
